--- a/apps/backend-functions/src/package.json
+++ b/apps/backend-functions/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockframes-functions",
-  "version": "0.0.2",
+  "version": "4.1.0",
   "license": "MIT",
   "main": "./main.js",
   "engines": {
@@ -11,24 +11,25 @@
     "@google-cloud/bigquery": "^5.12.0",
     "@google-cloud/storage": "^5.19.1",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
-    "@sendgrid/helpers": "^6.4.0",
-    "@sendgrid/mail": "^6.4.0",
+    "@sendgrid/helpers": "^7.6.2",
+    "@sendgrid/mail": "^7.6.2",
     "@sendgrid/eventwebhook": "^7.4.5",
-    "@sentry/browser": "^5.5.0",
-    "@sentry/node": "^5.5.0",
+    "@sentry/browser": "^6.19.6",
+    "@sentry/node": "^6.19.6",
     "@types/date-fns": "^2.6.0",
     "@types/sendgrid": "^4.3.0",
     "algoliasearch": "^4.13.0",
-    "core-js": "^3.3.2",
-    "date-fns": "^2.11.0",
+    "core-js": "^3.21.1",
+    "date-fns": "^2.28.0",
+    "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.20.0",
-    "@faker-js/faker": "^6.0.0",
-    "generate-password": "^1.4.2",
+    "@faker-js/faker": "^6.1.2",
+    "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "twilio": "3.76.1",
     "handlebars": "^4.7.7",
-    "puppeteer": "^12.0.1"
+    "puppeteer": "^13.5.2"
   }
 }
