--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockframes",
-  "version": "0.0.2",
+  "version": "4.1.0",
   "license": "MIT",
   "engines": {
     "node": "^16.14.0",
@@ -81,29 +81,30 @@
     "@angular/router": "13.2.7",
     "@angular/service-worker": "13.2.7",
     "@datorama/akita": "^6.1.3",
-    "@faker-js/faker": "^6.0.0",
+    "@faker-js/faker": "^6.1.2",
     "@google-cloud/bigquery": "^5.12.0",
+    "@google-cloud/pubsub": "^2.19.0",
     "@google-cloud/storage": "^5.19.1",
     "@juggle/resize-observer": "^3.2.0",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
     "@nrwl/angular": "13.9.6",
     "@sendgrid/eventwebhook": "^7.4.5",
-    "@sendgrid/helpers": "^6.4.0",
-    "@sendgrid/mail": "^6.4.0",
-    "@sentry/browser": "^5.5.0",
-    "@sentry/node": "^5.5.0",
+    "@sendgrid/helpers": "^7.6.2",
+    "@sendgrid/mail": "^7.6.2",
+    "@sentry/browser": "^6.19.6",
+    "@sentry/node": "^6.19.6",
     "akita-ng-fire": "^7.0.1-beta.1",
     "algoliasearch": "^4.13.0",
     "angular-calendar": "^0.28.5",
     "angular-idle-preload": "^3.0.0",
     "apexcharts": "^3.15.3",
-    "core-js": "^3.3.2",
-    "date-fns": "^2.11.0",
+    "core-js": "^3.21.1",
+    "date-fns": "^2.28.0",
     "dependency-graph": "^0.11.0",
-    "firebase": "^9.6.8",
+    "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.20.0",
-    "generate-password": "^1.4.2",
+    "generate-password": "^1.7.0",
     "handlebars": "^4.7.7",
     "intersection-observer": "^0.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -113,10 +114,10 @@
     "ng-form-factory": "^0.1.0-beta.3",
     "ng-intercom": "^8.0.0",
     "ngx-image-cropper": "^3.0.3",
-    "puppeteer": "^12.0.1",
+    "puppeteer": "^13.5.2",
     "rxfire": "^6.0.3",
     "rxjs": "~7.4.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "twilio": "3.76.1",
     "twilio-video": "^2.21.1",
     "xlsx": "^0.17.0",
