cypress timeout to 30m

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,7 +297,9 @@ jobs:
       - run: npx nx build backend-functions --configuration=e2e
       - start_e2e_emulators
       - run: npm start upgradeEmulators
-      - run: npx nx affected:e2e --configuration=emulator --exclude=catalog-e2e,crm-e2e,financiers-e2e,cms-e2e
+      - run:
+        npx nx affected:e2e --configuration=emulator --exclude=catalog-e2e,crm-e2e,financiers-e2e,cms-e2e
+        no_output_timeout: 30m
       - store_artifacts:
           path: dist/cypress/apps
   financiers-e2e:
