--- a/angular.json
+++ b/angular.json
@@ -154,7 +154,7 @@
           }
         }
       },
-      "tags": ["node"]
+      "tags": ["node", "cloud"]
     },
     "backend-ops": {
       "root": "apps/backend-ops",
@@ -453,7 +453,7 @@
           "outputs": ["{options.outputFile}"]
         }
       },
-      "tags": ["browser"],
+      "tags": ["browser", "e2e"],
       "implicitDependencies": ["catalog"]
     },
     "cms": {
@@ -664,7 +664,7 @@
           "outputs": ["{options.outputFile}"]
         }
       },
-      "tags": ["browser"],
+      "tags": ["browser", "e2e"],
       "implicitDependencies": ["cms"]
     },
     "consents": {
@@ -959,7 +959,7 @@
           "outputs": ["{options.outputFile}"]
         }
       },
-      "tags": ["browser"],
+      "tags": ["browser", "e2e"],
       "implicitDependencies": ["crm"]
     },
     "e2e": {
@@ -983,7 +983,7 @@
           }
         }
       },
-      "tags": ["browser"]
+      "tags": ["browser", "e2e", "deprecated"]
     },
     "event": {
       "projectType": "library",
@@ -1266,7 +1266,7 @@
           "outputs": ["{options.outputFile}"]
         }
       },
-      "tags": ["browser"],
+      "tags": ["browser", "e2e"],
       "implicitDependencies": ["festival"]
     },
     "financiers": {
@@ -1489,7 +1489,7 @@
           "outputs": ["{options.outputFile}"]
         }
       },
-      "tags": ["browser"],
+      "tags": ["browser", "e2e"],
       "implicitDependencies": ["financiers"]
     },
     "firebase-utils": {
@@ -1878,7 +1878,7 @@
           "styleext": "scss"
         }
       },
-      "tags": ["shared"]
+      "tags": ["browser", "deprecated"]
     }
   }
 }
