--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,7 @@
       "@blockframes/campaign/*": ["libs/campaign/src/lib/*"],
       "@blockframes/consents/*": ["libs/consents/src/lib/*"],
       "@blockframes/contract/*": ["libs/contract/src/lib/*"],
+      "@blockframes/devops": ["libs/devops/src/index.ts"],
       "@blockframes/e2e/*": ["libs/e2e/src/lib/*"],
       "@blockframes/event/*": ["libs/event/src/lib/*"],
       "@blockframes/financial-report/*": ["libs/financial-report/src/lib/*"],
