--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "ng-apexcharts": "^1.2.0",
     "ng-form-factory": "^0.1.0-beta.3",
     "ng-intercom": "^8.0.0",
+    "ngfire": "^0.0.18",
     "ngx-image-cropper": "^3.0.3",
     "puppeteer": "^13.5.2",
     "rxfire": "^6.0.3",
