--- a/libs/firebase-utils/tsconfig.spec.json
+++ b/libs/firebase-utils/tsconfig.spec.json
@@ -5,6 +5,6 @@
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "files": ["src/test-setup.ts"],
+  "files": [],
   "include": ["**/*.spec.ts", "**/*.test.ts", "**/*.spec.js", "**/*.test.js", "**/*.d.ts"]
 }
