--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "affected": "nx affected",
     "pwm": "pwmetrics --config",
     "bundlesize": "bundlesize",
-    "postinstall": "npm link && ngcc --properties es2015 browser module main && node ./decorate-angular-cli.js",
+    "postinstall": "ngcc --properties es2015 browser module main && node ./decorate-angular-cli.js",
     "prerender:festival": "nx build festival --prod && nx run festival:server --configuration production && angular-prerender --browser-target festival:build --server-target festival:server",
     "backend-ops": "ts-node -P tools/tsconfig.tools.json apps/backend-ops/src/main.ts"
   },
