WIP for runtimeConfig update (#8442)
* WIP for runtimeConfig update

* hotfix

* fix

* hotfix

* hotfix

* hotfix

* test

* hotfix

* hotfix

* fix

Co-authored-by: Bruce <eelios@gmail.com>
Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "deploy:functions:config": "ts-node -P tools/tsconfig.tools.json tools/scripts/deploy-function-config.ts",
     "functions:shell": "concurrently --kill-others \"npm run build:functions --watch\" \"firebase functions:shell\" --raw",
     "emulators:start": "npm start emulators",
-    "test": "firebase functions:config:get > .runtimeconfig.json && firebase emulators:exec --only firestore 'cross-env nx run-many --target=test --all --configuration=$NG_CONFIG'",
+    "test": "npm run backend-ops writeRuntimeConfig && npx firebase emulators:exec --only firestore,auth 'cross-env nx run-many --target=test --all --configuration=$NG_CONFIG'",
     "lint": "cross-env nx run-many --target=lint --all --configuration=$NG_CONFIG",
     "lint:backend-functions": "cross-env nx run backend-functions:lint --configuration=$NG_CONFIG",
     "e2e": "cross-env nx run-many --target=e2e --all  --configuration=$NG_CONFIG",
@@ -44,7 +44,7 @@
     "affected:build": "cross-env nx affected:build --configuration=$NG_CONFIG",
     "affected:e2e": "cross-env nx affected:e2e --configuration=$NG_CONFIG",
     "affected:lint": "cross-env nx affected:lint --configuration=$NG_CONFIG",
-    "affected:test": "firebase functions:config:get > .runtimeconfig.json && firebase emulators:exec --only firestore 'cross-env nx affected:test --base=origin/develop --configuration=$NG_CONFIG'",
+    "affected:test": "npm run backend-ops writeRuntimeConfig && npx firebase emulators:exec --only firestore,auth 'cross-env nx affected:test --base=origin/develop --configuration=$NG_CONFIG'",
     "affected:dep-graph": "nx affected:dep-graph",
     "format": "nx format:write",
     "format:write": "nx format:write",
