--- a/apps/backend-ops/tsconfig.json
+++ b/apps/backend-ops/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "types": ["node", "jest"],
+    "types": ["node"],
     "typeRoots": ["../../node_modules/@types"]
   },
   "include": [],
