--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ commands:
             - dependencies-{{ .Environment.CACHE_VERSION }}
             - dependencies-
       - run: touch .env # dotenv will crash without this
-      - run: cp env/env.blockframes-ci.ts env/env.ts # required for the typechecking & file rewrite to work
+      - run: cp env/env.demo-blockframes.ts env/env.ts # required for the typechecking & file rewrite to work
       - run: npm install --no-save
       - run: npx cypress install
       - run: git gc
