--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -49,5 +49,5 @@ RUN gcloud config set pass_credentials_to_gsutil true
 # Used in CI
 ENV GOOGLE_APPLICATION_CREDENTIALS /home/circleci/repo/tools/credentials/creds.json
 ENV NODE_OPTIONS --max_old_space_size=7168
-ENV PROJECT_ID blockframes-ci
+ENV PROJECT_ID demo-blockframes
 ENV SERVICE_ACCOUNT FIREBASE_CI_SERVICE_ACCOUNT
