--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,8 @@ executors:
     docker:
       - image: blockframes/ci:demo-env
         environment:
-          NODE_OPTIONS="--max-old-space-size=8192"
+          NODE_OPTIONS: '--max-old-space-size=8192'
+          PROJECT_ID: blockframes-ci
     working_directory: ~/repo
     resource_class: large
 jobs:
