--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "cross-env": "^7.0.2",
     "cypress": "^9.1.1",
     "cypress-file-upload": "^5.0.6",
+    "cypress-log-to-output": "^1.1.2",
     "cypress-mailosaur": "^2.3.3",
     "cypress-wait-until": "^1.7.1",
     "dotenv": "10.0.0",
@@ -179,6 +180,7 @@
     "inquirer": "^7.3.3",
     "jest": "27.2.3",
     "jest-environment-jsdom": "^27.5.1",
+    "jest-junit": "^13.2.0",
     "jest-preset-angular": "11.1.1",
     "ng-packagr": "13.2.1",
     "nx": "13.9.6",
