--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -314,7 +314,7 @@ jobs:
   festival-e2e:
     executor: blockframes-ci
     environment:
-      PROJECT_ID: blockframes-ci
+      PROJECT_ID: demo-blockframes
     steps:
       - prepare_environment
       - run: npx nx build backend-functions --configuration=e2e
