--- a/angular.json
+++ b/angular.json
@@ -241,7 +241,7 @@
                 }
               ],
               "serviceWorker": true,
-              "ngswConfigPath": "apps/catalog/catalog/ngsw-config.json"
+              "ngswConfigPath": "ngsw-config.json"
             }
           }
         },
@@ -898,7 +898,7 @@
                 }
               ],
               "serviceWorker": true,
-              "ngswConfigPath": "apps/financiers/financiers/ngsw-config.json"
+              "ngswConfigPath": "ngsw-config.json"
             }
           }
         },
