--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,11 @@
     "nodesmith",
     "twilio"
   ],
-  "editor.formatOnSave": false
+  "editor.formatOnSave": false,
+  "json.schemas": [
+  {
+    "fileMatch": ["cypress.json"],
+    "url": "https://raw.githubusercontent.com/cypress-io/cypress/develop/cli/schema/cypress.schema.json"
+  }
+]
 }
