--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "ng-apexcharts": "^1.2.0",
     "ng-form-factory": "^0.1.0-beta.3",
     "ng-intercom": "^8.0.0",
+    "ng-rive": "^0.1.2",
     "ngfire": "^0.0.33",
     "ngx-image-cropper": "^3.0.3",
     "puppeteer": "^13.5.2",
