--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,14 @@ commands:
       - run:
           background: true
           command: npm start emulators
+  start_unit_tests_emulators:
+    steps:
+      - restore_cache:
+          keys:
+            - emulator-cache-v1-
+      - run:
+          background: true
+          command: npm start emulators
   fail_on_production:
     description: Exit if run against production - failsafe
     steps:
@@ -235,6 +243,8 @@ jobs:
       PROJECT_ID: demo-blockframes
     steps:
       - prepare_environment
+      - run: npx nx build backend-functions --configuration=e2e
+      - start_unit_tests_emulators
       - run:
           command: npm run affected:test
           no_output_timeout: 15m
