--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ commands:
             - emulator-cache-v1-
       - run:
           background: true
-          command: npm start emulators
+          command: npm start emulatorsUnitTests
   fail_on_production:
     description: Exit if run against production - failsafe
     steps:
@@ -243,8 +243,10 @@ jobs:
       PROJECT_ID: demo-blockframes
     steps:
       - prepare_environment
+      - run: npm start writeRuntimeConfig
       - run: npx nx build backend-functions --configuration=e2e
       - start_unit_tests_emulators
+      - run: npm start upgradeEmulators
       - run:
           command: npm run affected:test
           no_output_timeout: 15m
